<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NoteAddUpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_coffee"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kategori"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/spnr_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/kategori"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/edt_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/makanan_pelengkap"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/ch_cake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake"/>

            <CheckBox
                android:id="@+id/ch_brownies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownies" />

            <CheckBox
                android:id="@+id/ch_dalgona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dalgona_candy" />

        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan" />
</LinearLayout>